--- a/.github/workflows/pull-the-repo-and-deploy-directly-within-ACR.yml
+++ b/.github/workflows/pull-the-repo-and-deploy-directly-within-ACR.yml
@@ -5,7 +5,10 @@ on:
 name: Build & push image to ACR
 run-name: Build & Push Image to ACR ${{ github.head_ref }} - ${{ github.run_id }} - ${{ github.sha }}
 
-
+permissions:
+  actions: write
+  id-token: write
+  contents: read
 
 jobs:
   build-within-azr:
