--- a/.github/workflows/pull-the-repo-and-deploy-directly-within-ACR.yml
+++ b/.github/workflows/pull-the-repo-and-deploy-directly-within-ACR.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Checkout the deployment branch
-        uses: actions/checkout@3.4.0
+        uses: actions/checkout@v3.4.0
         with:
           ref: deployment
     
