--- a/.github/workflows/move-and-populate-final-production-ready-files.yml
+++ b/.github/workflows/move-and-populate-final-production-ready-files.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Move and populate the final production files=
       run: | 
         mv docker-compose.production.yml docker-compose.yml; \
-        mv Dockerfile.produdction Dockerfile; \
+        mv Dockerfile.production Dockerfile; \
         cat production.env >> .env;
         echo GITHUB_REVISION=${{ github.revision }} >> .env;
         echo GITHUB_REPO_URL=${{ github.repository_url }} >> .env;
